[gd_scene load_steps=8 format=3 uid="uid://cdrfw3w0vknif"]

[ext_resource type="Script" path="res://Scripts/UI/bg_image.gd" id="1_chcew"]
[ext_resource type="Texture2D" uid="uid://d3qgiifj3epgl" path="res://Graphics/BG/Title_BG_1x.png" id="1_euhlv"]
[ext_resource type="Texture2D" uid="uid://dlbew3fx6wfmf" path="res://Graphics/BG/Old/Tartarus_BG_1x.png" id="3_30cq8"]
[ext_resource type="Texture2D" uid="uid://bb6uy1ebpp7cr" path="res://Graphics/BG/down_tran_img.png" id="4_bnltq"]
[ext_resource type="Texture2D" uid="uid://djnhjuf23frn" path="res://Graphics/BG/Tartarus_BG_Bot_1x.png" id="4_lhdho"]
[ext_resource type="Texture2D" uid="uid://384uvi5ypumk" path="res://Graphics/BG/BLANK.png" id="5_bh433"]
[ext_resource type="Texture2D" uid="uid://m7a64n2o5r53" path="res://Graphics/BG/up_tran_img.png" id="5_pn2b0"]

[node name="TR_BG_Image" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chcew")
bg_texture = ExtResource("1_euhlv")
sky_texture = ExtResource("5_bh433")
up_bg_texture = ExtResource("3_30cq8")
down_bg_texture = ExtResource("3_30cq8")

[node name="HB_LR_SCROLL" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 2564.0
offset_bottom = 720.0
theme_override_constants/separation = 0

[node name="LR_BG1" type="TextureRect" parent="HB_LR_SCROLL"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_lhdho")

[node name="LR_BG2" type="TextureRect" parent="HB_LR_SCROLL"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_lhdho")
flip_h = true

[node name="LR_BG3" type="TextureRect" parent="HB_LR_SCROLL"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_lhdho")

[node name="HB_LR_SKY_SCROLL" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 3840.0
offset_bottom = 720.0
theme_override_constants/separation = 0

[node name="LR_BG_TOP1" type="TextureRect" parent="HB_LR_SKY_SCROLL"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_bh433")

[node name="LR_BG_TOP2" type="TextureRect" parent="HB_LR_SKY_SCROLL"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_bh433")
flip_h = true

[node name="LR_BG_TOP3" type="TextureRect" parent="HB_LR_SKY_SCROLL"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_bh433")

[node name="VB_DOWN_SWIPE" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 2440.0
theme_override_constants/separation = 0

[node name="BG1" type="TextureRect" parent="VB_DOWN_SWIPE"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_euhlv")

[node name="Tran_BG" type="TextureRect" parent="VB_DOWN_SWIPE"]
layout_mode = 2
texture = ExtResource("4_bnltq")

[node name="BG2" type="TextureRect" parent="VB_DOWN_SWIPE"]
layout_mode = 2
texture = ExtResource("3_30cq8")

[node name="VB_UP_SWIPE" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -2440.0
offset_right = 1280.0
grow_vertical = 0
theme_override_constants/separation = 0

[node name="BG2" type="TextureRect" parent="VB_UP_SWIPE"]
layout_mode = 2
texture = ExtResource("3_30cq8")

[node name="Tran_BG" type="TextureRect" parent="VB_UP_SWIPE"]
layout_mode = 2
texture = ExtResource("5_pn2b0")

[node name="BG1" type="TextureRect" parent="VB_UP_SWIPE"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_euhlv")
